Disable CI for ECL on DragonflyBSD

--- a/README.org
+++ b/README.org
@@ -31,7 +31,7 @@ The following software combinations are tested via GitHub actions:
 
 - [[https://sbcl.org/][SBCL]] (Linux, Windows, macOS, OpenBSD, FreeBSD, DragonflyBSD, Solaris)
 - [[https://ccl.clozure.com/][CCL]] (Linux, macOS)
-- [[https://ecl.common-lisp.dev/][ECL]] (Linux, macOS, OpenBSD, FreeBSD, DragonflyBSD, Solaris)
+- [[https://ecl.common-lisp.dev/][ECL]] (Linux, macOS, OpenBSD, FreeBSD, Solaris)
 
 ** Installation
 
